--- a/reuse.css
+++ b/reuse.css
@@ -47,13 +47,13 @@ body {
 }
 
 /* nav contents */
-.nav-item {
+.nav-item, .top-icon {
     display: block;
     padding: 1rem;
     color: var(--black);
 }
 .nav-item:hover, .nav-item:hover .dp-title 
-, .nav-item:hover i {
+, .nav-item:hover i, .top-icon:hover, .top-icon:hover i {
     cursor: pointer;
     background-color: var(--pink);
     color: var(--black);
@@ -87,10 +87,103 @@ body {
     color: var(--white);
 }
 
+/* Responsive nav */
+.top-icon {
+    display: none;
+}
+
+/* Footer styling */
+.footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    padding-inline: 4rem;
+    background-color: var(--brown);
+}
+.footer-wrapper * {
+    color: var(--white);
+}
+.footer-logowrap {
+    font-size: 3rem;
+    font-weight: 900;
+    padding: 1rem 0;
+}
+.footer-addwrap {
+    padding: 1rem 0;
+    font-size: 0.8rem;
+    border-top: 2px solid var(--white);
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+.footer-contact {
+    margin: 1rem 0;
+}
+.foot-item {
+    display: flex;
+    gap: 1rem;
+    padding: 0.5rem;
+    align-items: center;
+}
+.foot-info {
+    display: flex;
+    flex-direction: column;
+}
+
 /* screen size control */
 @media screen and (max-width: 767px) {
     .nav-content * {
-        font-size: 0.7rem;
+        font-size: 0.8rem;
+    }
+}
+@media screen and (width <= 705px) {
+    /* for nav*/
+    .nav-wrapper {
+        padding: 0;
+    }
+    .navicon-wrapper {
+        display: none;
+    }
+    .nav-content div:not(:first-child) {
+        display: none;
+    }
+    .top-icon {
+        display: block;
+    }
+    .nav-content.responsive {
+        position: absolute;
+        width: 70%;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        z-index: 2;
+        background-color: var(--brown);
+    }
+    .nav-content.responsive * {
+        color: var(--white);
+    }
+    .nav-content.responsive .dropdown-content {
+        position: relative;
+        top: auto;
+        left: auto;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    .nav-content.responsive .nav-item {
+        display: block;
+    }
+    .nav-item:hover {
+        color: var(--black);
+    }
+
+    /* for footer */
+    .footer-wrapper {
+        flex-direction: column;
+    }
+    .foot-info, .footer-addwrap {
+        font-size: 0.6rem;
     }
 }
 
