--- a/styleFAQ.css
+++ b/styleFAQ.css
@@ -2,21 +2,26 @@
 /* Must keep */
 /* Font Import */
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 :root {
     --brown: #261700;
-    --pink: #F7E4D7; 
-    --black : #28282B;
+    --pink: #F7E4D7;
+    --black: #28282B;
     --white: #F9F6EE;
+    --bggreen: #90EE90;
 }
+
 * {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     color: var(--black);
 }
+
 html {
     scroll-behavior: smooth;
     font-family: 'Poppins', sans-serif;
 }
+
 body {
     margin: 0;
     padding: 0;
@@ -27,8 +32,135 @@ body {
 .icon-container {
     font-size: 1.2rem;
 }
+
+/* Login Popup Styling */
+.login-cover {
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    position: fixed;
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
+}
+
+.login-form {
+    width: min(90%, 400px);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 0;
+    border: 1px solid var(--black);
+    box-shadow: 0 0 20px var(--black);
+    overflow: hidden;
+    border-radius: 20px;
+    background-color: var(--white);
+}
+
+.close-icon {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    font-size: 2rem;
+    color: red;
+    cursor: pointer;
+}
+
+.login-header {
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+.error-message {
+    width: 100%;
+}
+
+.error-dialogue {
+    margin: 2rem 0;
+    display: block;
+    width: 100%;
+    background-color: var(--pink);
+    text-align: center;
+    padding: 0.5rem 0;
+    color: red;
+}
+
+.loginform-wrapper {
+    width: 90%;
+    margin-top: 0;
+}
+
+.loginform-wrapper form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.loginform-wrapper form span {
+    display: block;
+    width: 100%;
+}
+
+.form-input {
+    width: 100%;
+    margin: 4px 0;
+    position: relative;
+}
+
+.form-input input {
+    width: 100%;
+    padding: 8px 2%;
+    border: 1px solid var(--black);
+    outline: none;
+}
+
+#pass-icon {
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translate(0, -50%);
+    cursor: pointer;
+}
+
+a {
+    color: blue;
+}
+
+.loginform-wrapper form button {
+    margin: 16px 0;
+    padding: 8px 16px;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 25px;
+    border: none;
+    background: var(--bggreen);
+    outline: none;
+    box-shadow: 0 2px 10px var(--black);
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+
+.loginform-wrapper form button:hover {
+    scale: 1.1;
+    box-shadow: var(--bggreen);
+}
+
+.loginform-wrapper form span:first-child,
+.loginform-wrapper form span:nth-child(3) {
+    font-weight: 600;
+}
+
+.loginform-wrapper form span:last-child {
+    text-align: center;
+}
+
 /* nav wrapper */
-.nav-wrapper{
+.nav-wrapper {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -38,22 +170,30 @@ body {
     position: fixed;
     transition: 0.3s ease-in-out;
 }
+
 .nav-wrapper * {
     font-weight: bolder;
 }
+
 /* nav content wrapper */
 .nav-content {
     display: flex;
 }
 
 /* nav contents */
-.nav-item, .top-icon {
+.nav-item,
+.top-icon {
     display: block;
     padding: 1rem;
     color: var(--black);
 }
-.nav-item:hover, .nav-item:hover .dp-title 
-, .nav-item:hover i, .top-icon:hover, .top-icon:hover i, .nav-item.active:hover {
+
+.nav-item:hover,
+.nav-item:hover .dp-title,
+.nav-item:hover i,
+.top-icon:hover,
+.top-icon:hover i,
+.nav-item.active:hover {
     cursor: pointer;
     background-color: var(--pink);
     color: var(--black);
@@ -63,6 +203,7 @@ body {
 .dropdown {
     position: relative;
 }
+
 .dropdown-content {
     width: 250px;
     top: 100%;
@@ -72,9 +213,11 @@ body {
     z-index: 2;
     background-color: var(--brown);
 }
+
 .dropdown-content * {
     color: var(--white);
 }
+
 .dropdown:hover .dropdown-content {
     display: block;
 }
@@ -83,6 +226,7 @@ body {
 .nav-scrolled {
     background-color: var(--brown);
 }
+
 .nav-scrolled * {
     color: var(--white);
 }
@@ -97,6 +241,7 @@ body {
     background-color: var(--brown);
     color: var(--white);
 }
+
 .nav-wrapper.nav-scrolled .nav-item.active {
     background-color: var(--pink);
     color: var(--black);
@@ -109,14 +254,17 @@ body {
     padding-inline: 4rem;
     background-color: var(--brown);
 }
+
 .footer-wrapper * {
     color: var(--white);
 }
+
 .footer-logowrap {
     font-size: 3rem;
     font-weight: 900;
     padding: 1rem 0;
 }
+
 .footer-addwrap {
     padding: 1rem 0;
     font-size: 0.8rem;
@@ -125,15 +273,18 @@ body {
     flex-direction: column;
     gap: 0.2rem;
 }
+
 .footer-contact {
     margin: 1rem 0;
 }
+
 .foot-item {
     display: flex;
     gap: 1rem;
     padding: 0.5rem;
     align-items: center;
 }
+
 .foot-info {
     display: flex;
     flex-direction: column;
@@ -147,16 +298,19 @@ body {
     align-items: center;
     flex-direction: column;
 }
+
 .main-header {
     margin-bottom: 2rem;
     font-size: 2rem;
     font-weight: 900;
 }
+
 .main-header span {
     text-align: center;
     display: block;
     width: 100%;
 }
+
 .faq-container {
     display: flex;
     flex-direction: column;
@@ -167,39 +321,53 @@ body {
     overflow: hidden;
     text-align: justify;
 }
-.faq-upper, .faq-lower {
+
+.faq-upper,
+.faq-lower {
     display: flex;
     padding: 1rem;
 }
-.faq-upper i, .faq-lower i {
+
+.faq-upper i,
+.faq-lower i {
     flex: 1;
     font-size: 1.5rem;
 }
-.faq-upper span, .faq-lower > div {
+
+.faq-upper span,
+.faq-lower>div {
     flex: 9;
 }
-.faq-lower > div {
+
+.faq-lower>div {
     display: flex;
     flex-direction: column;
 }
+
 .faq-lower div a {
     color: blue;
 }
+
 .faq-upper {
     background-color: var(--brown);
 }
+
 .faq-upper * {
     color: var(--white);
 }
+
 .mass-sched {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
+
 .mass-sched * {
     font-size: 0.9rem;
 }
-.parish-masses, .chapel-masses {
+
+.parish-masses,
+.chapel-masses {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -212,27 +380,34 @@ body {
     .nav-content * {
         font-size: 0.8rem;
     }
+
     .mass-sched {
         display: flex;
         flex-direction: column;
         gap: 1rem;
     }
 }
+
 /* query screen size for display */
-@media screen and (width <= 705px) {
+@media screen and (width <=705px) {
+
     /* for nav*/
     .nav-wrapper {
         padding: 0;
     }
+
     .navicon-wrapper {
         display: none;
     }
+
     .nav-content div:not(:first-child) {
         display: none;
     }
+
     .top-icon {
         display: block;
     }
+
     .nav-content.responsive {
         position: absolute;
         width: 70%;
@@ -244,9 +419,11 @@ body {
         z-index: 2;
         background-color: var(--brown);
     }
+
     .nav-content.responsive * {
         color: var(--white);
     }
+
     .nav-content.responsive .dropdown-content {
         position: relative;
         top: auto;
@@ -255,18 +432,37 @@ body {
         padding: 0;
         margin: 0;
     }
+
     .nav-content.responsive .nav-item {
         display: block;
     }
+
+    .nav-item {
+        padding-inline: 0;
+    }
+
     .nav-item:hover {
         color: var(--black);
+    }
+
+    .nav-item.dropdown:hover,
+    .nav-item.dropdown:hover>span,
+    .nav-item.dropdown:hover>span>i {
+        background-color: var(--brown);
+    }
+
+    .nav-item.dropdown:hover>span,
+    .nav-item.dropdown:hover>span>i {
+        color: var(--white);
     }
 
     /* for footer */
     .footer-wrapper {
         flex-direction: column;
     }
-    .foot-info, .footer-addwrap {
+
+    .foot-info,
+    .footer-addwrap {
         font-size: 0.6rem;
     }
 }
