--- a/styleHOME.css
+++ b/styleHOME.css
@@ -8,6 +8,7 @@
     --black : #28282B;
     --white: #F9F6EE;
     --grey: #696969;
+    --bggreen: #90EE90;
 }
 * {
     box-sizing: border-box;
@@ -144,6 +145,132 @@ body {
     flex-direction: column;
 }
 
+/* Login Popup Styling */
+.login-cover {
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: none;
+    position: fixed;
+    background: linear-gradient(to bottom right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+}
+
+.login-form {
+    width: min(90%, 400px);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem 0;
+    border: 1px solid var(--black);
+    box-shadow: 0 0 20px var(--black);
+    overflow: hidden;
+    border-radius: 20px;
+    background-color: var(--white);
+}
+
+.close-icon {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    font-size: 2rem;
+    color: red;
+    cursor: pointer;
+}
+
+.login-header {
+    font-size: 1.5rem;
+    font-weight: 900;
+}
+
+.error-message {
+    width: 100%;
+}
+
+.error-dialogue {
+    margin: 2rem 0;
+    display: block;
+    width: 100%;
+    background-color: var(--pink);
+    text-align: center;
+    padding: 0.5rem 0;
+    color: red;
+}
+
+.loginform-wrapper {
+    width: 90%;
+    margin-top: 0;
+}
+
+.loginform-wrapper form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.loginform-wrapper form span {
+    display: block;
+    width: 100%;
+}
+
+.form-input {
+    width: 100%;
+    margin: 4px 0;
+    position: relative;
+}
+
+.form-input input {
+    width: 100%;
+    padding: 8px 2%;
+    border: 1px solid var(--black);
+    outline: none;
+}
+
+#pass-icon {
+    position: absolute;
+    right: 5%;
+    top: 50%;
+    transform: translate(0, -50%);
+    cursor: pointer;
+}
+
+a {
+    color: blue;
+}
+
+.loginform-wrapper form button {
+    margin: 16px 0;
+    padding: 8px 16px;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 25px;
+    border: none;
+    background: var(--bggreen);
+    outline: none;
+    box-shadow: 0 2px 10px var(--black);
+    cursor: pointer;
+    transition: 0.4s ease;
+}
+
+.loginform-wrapper form button:hover {
+    scale: 1.1;
+    box-shadow: var(--bggreen);
+}
+
+.loginform-wrapper form span:first-child,
+.loginform-wrapper form span:nth-child(3) {
+    font-weight: 600;
+}
+
+.loginform-wrapper form span:last-child {
+    text-align: center;
+}
+
 /* Main content css */
 section {
     margin-bottom: 2rem;
@@ -162,6 +289,9 @@ section {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+.img-slide:first-child {
+    display: flex;
 }
 .img-slide > .content {
     display: flex;
