--- a/styleSCHEDULEEVENT.css
+++ b/styleSCHEDULEEVENT.css
@@ -119,11 +119,11 @@ body {
     height: auto;
     padding: 50px;
     margin-bottom: 2rem;
-    box-shadow: 0 0 15px 1px var(--black);
+    /*box-shadow: 0 0 15px 1px var(--black);*/
     border-radius: 10px;
     overflow: hidden;
     text-align: justify;
-	border: 1px solid green;
+	background-color: rgb(38, 23, 0, 0.3);
 }
 
 .events-preference {
@@ -177,10 +177,45 @@ select{
 option{
     background-color:var(--white);
 }
+.contents-cont{
+	display: flex;
+	flex-direction: column;
+}
+.grid-cont{
+	display: grid;
+	width: 100%;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
+}
+.form-grid-cont{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-template-rows: repeat(3, 1fr);
+	grid-column-gap: 23px;
+	grid-row-gap: 7px;
+	border: 1px solid red;
+}
+.popupForm {
+	display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--white);
+    border-radius: 20px;
+    box-shadow: 0 0 10px var(--black);
+    padding: 1rem;
+    width: 80%;
+    text-align: center;
+}
+
 
 /* Footer styling */
 footer{
-    position:fixed;
     bottom:0px;
     width:100%;
 }
