--- a/styleREGISTER.css
+++ b/styleREGISTER.css
@@ -168,14 +168,6 @@ button:hover {
     color: var(--white);
     font-weight: 900;
 }
-.popupForm {
-    background-color: var(--white);
-    border-radius: 20px;
-    box-shadow: 0 0 10px var(--black);
-    padding: 1rem;
-    width: 80%;
-    text-align: center;
-}
 .form-btnarea {
     width: 80%;
 }
@@ -215,8 +207,24 @@ button:hover {
 }
 
 /* popup form */ 
-.popupForm {
+#clearForm, #submitForm {
     display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.popupForm {
+    background-color: var(--white);
+    border-radius: 20px;
+    box-shadow: 0 0 10px var(--black);
+    padding: 1rem;
+    width: min(80%, 250px);
+    text-align: center;
+    display: flex;
     position: absolute;
     top: 50%;
     left: 50%;
