--- a/styleREGISTEROTP.css
+++ b/styleREGISTEROTP.css
@@ -116,9 +116,16 @@ body {
     gap: 0.5rem;
     margin-top: 8px;
 }
-.option-wrapper > span > a {
-    color: blue;
-    text-decoration: none;
+.option-wrapper input[type='submit'] {
+    background: none;
+	color: blue;
+    font-weight: 600;
+    text-decoration: underline;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
 button {
     cursor: pointer;
