--- a/styleADDREC.css
+++ b/styleADDREC.css
@@ -91,3 +91,145 @@ body {
 }
 
 /* Main Content */
+.form-title {
+    font-size: 2rem;
+    font-weight: 600;
+}
+.form-grid-cont {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1rem;
+}
+.grid-cont {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+.input-box {
+    display: flex;
+    flex-direction: column;
+}
+.contactnum {
+    display: flex;
+}
+.contactnum > input:first-child {
+    width: 20%;
+}
+.contactnum > input:nth-child(2) {
+    width: 100%;
+}
+input, select {
+    padding: 0.5rem 1rem;
+}
+
+/* for buttons */
+.main-content button {
+    cursor: pointer;
+    transition: 0.6s ease;
+}
+
+.main-content button:hover {
+    scale: 1.1;
+}
+
+.button-area {
+    width: 100%;
+    margin-bottom: 2rem;
+}
+
+.form-btnarea {
+    width: 80%;
+}
+
+.button-area,
+.form-btnarea {
+    margin-top: 3rem;
+    display: flex;
+    justify-content: space-between;
+}
+
+.button-area button,
+.form-btnarea button {
+    width: 5rem;
+    padding: 0.5rem 1rem;
+    border-radius: 25px;
+    border: none;
+    box-shadow: 0 0 10px grey;
+    font-weight: 600;
+}
+
+.button-area button:first-child,
+.form-btnarea button:first-child {
+    background-color: var(--btnRed);
+    color: red;
+}
+
+.button-area button:nth-child(2),
+.form-btnarea button:nth-child(2) {
+    background-color: var(--btnGreen);
+    color: green;
+}
+.backbtn {
+    border: none;
+    box-shadow: 0 0 10px 1px grey;
+    background-color: var(--black);
+    border-radius: 50%;
+    width: 2rem;
+    aspect-ratio: 1/1;
+}
+.backbtn i {
+    color: var(--white);
+    font-weight: 900;
+}
+.opt-area {
+    width: 50%;
+    padding-inline: 1rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
+}
+.opt-area button {
+    padding: 0.5rem 1rem;
+}
+
+/* popup form */
+#deleteForm,
+#clearForm,
+#submitForm {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popupForm {
+    background-color: var(--white);
+    border-radius: 20px;
+    box-shadow: 0 0 10px var(--black);
+    padding: 1rem;
+    width: min(80%, 350px);
+    text-align: center;
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.headertext-box {
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.headertext-box>small {
+    font-weight: 100;
+    text-align: center;
+}
