--- a/styleDASHBOARD.css
+++ b/styleDASHBOARD.css
@@ -28,63 +28,88 @@ body {
 /* Content Wrapper */
 .content-wrapper {
     width: 100%;
-    min-width: 1000px;
+    min-width: 1300px;
     height: 100vh;
     overflow: hidden;
-    display: grid;
-    grid-template-columns: 1fr 4fr;
+    display: flex;
 }
 
 /* Nav Wrapper */
 .nav-wrapper {
-    background-color: var(--white);
+    overflow: hidden;
+    z-index: 10;
+    background-color: var(--brown);
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 3rem 0;
+    padding: 0rem;
     gap: 3rem;
-    border-right: 2px solid var(--black);
+    width: 0px;
+    transition: 0.1s ease-in-out;
+    position: relative;
+}
+.nav-wrapper * {
+    color: var(--white);
 }
 .icon-wrapper {
-    font-size: clamp(1.25rem, 0.7143rem + 1.7143vw, 2rem);
+    font-size: clamp(0.8rem, 0.5143rem + 0.9143vw, 1.2rem);
     font-weight: 900;
+
 }
 .nav-items {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    width: 100%;
 }
-.nav-items > button {
-    font-size: clamp(0.7rem, 0.4857rem + 0.6857vw, 1rem);
+.nav-items > div {
+    padding: 1rem 0.5rem;
     cursor: pointer;
-    padding: 0.5rem 1rem;
-    border-radius: 10px;
-    border: unset;
-    font-weight: 600;
-    box-shadow: 0 2px 10px var(--grey);
-    transition: 200ms ease-in;
 }
-.nav-items > button:not(.active-btn) {
-    background-color: var(--pink);
-}
-/* Active Button */
+/* Active Div */
 .active-btn {
-    background-color: var(--brown);
+    background-color: rgba(255, 255, 255, 0.3);
     color: var(--white);
+    border-radius: 5px;
 }
-/* Button Hover */
-.nav-items > button:not(.active-btn):hover {
-    background-color: var(--brown);
-    color: var(--white);
+/* Div Hover */
+.nav-items > div:hover {
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 
 /* Body Wrapper */
 .main-content {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    background-color: var(--white);
+    overflow: hidden auto;
+}
+.inner-main {
+    width: 100%;
     background-color: var(--white);
     overflow: hidden auto;
     display: grid;
-    grid-template-columns: 2.5fr 1fr;
+    grid-template-columns: 3fr 1fr;
+}
+.dashboard-heading {
+    background-color: var(--brown);
+    display: flex;
+    gap: 1rem;
+    font-weight: 600;
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    padding: 1rem 1rem;
+}
+.internal-heading, .internal-heading * {
+    font-size: 1.3rem;
+    color: var(--white);
+}
+.close-nav {
+    position: absolute;
+    top: 1rem;
+    right: 2%;
+    font-size: 1.5rem;
 }
 
 /* Left Main Content */
@@ -103,6 +128,7 @@ body {
     font-size: 1.5rem;
     font-weight: bolder;
     margin-bottom: 1rem;
+    border-bottom: 1px solid var(--black);
 }
 .appointment-cards {
     display: flex;
@@ -216,7 +242,19 @@ body {
 .container-sched {
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
 }
 .container-sched:first-child {
     margin-bottom: 5rem;
+}
+/* Side Notifications */
+.upcoming-events {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.display-today, .no-display {
+    border-radius: 5px;
+    background-color: var(--white);
+    padding: 0.5rem;
 }
