--- a/styleREGISTEROTP.css
+++ b/styleREGISTEROTP.css
@@ -83,10 +83,33 @@ body {
     border-radius: 10px;
     box-shadow: 0 0 15px 2px var(--black);
     position: relative;
+    display: flex;
+    flex-direction: column;
 }
 .progress-wrapper {
-    display: flex;
-    justify-content: center;
+    align-self: center;
+    width: 50%;
+    position: relative;
+}
+.progress:nth-child(1) {
+    position: absolute;
+    top: 0;
+    width: 1rem;
+    left: 0;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    z-index: 1;
+    background-color: blue;
+}
+.progress:nth-child(3) {
+    width: 1rem;
+    right: 0;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    z-index: 1;
+    background-color: blue;
 }
 .form-heading {
     width: 100%;
