--- a/styleSEARCH.css
+++ b/styleSEARCH.css
@@ -170,221 +170,95 @@ body {
     width: 100%;
     display: flex;
     min-height: 100vh;
-}
-
-.main-left {
+    justify-content: space-evenly;
     padding: 8rem 0;
-    flex: 1;
-    background-color: white;
-    border-right: 2px solid var(--black);
 }
-
-.main-left>form {
+.left-cont {
+    width: min(90%, 450px);
+    padding: 1rem;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+.right-cont {
+    width: min(90%, 400px);
+}
+.left-heading {
+    margin-bottom: 1rem;
+    font-size: clamp(1.5rem, 1.1429rem + 1.1429vw, 2rem);
+}
+form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 2rem;
 }
-
-.spanfn {
-    text-align: center;
-    font-size: clamp(0.9rem, 0.4714rem + 1.3714vw, 1.5rem);
-}
-
-.spanln {
-    text-align: center;
-    font-size: clamp(0.8rem, 0.6571rem + 0.4571vw, 1rem);
-}
-
-.main-left>form>button {
-    width: min(80%, 160px);
-    background-color: var(--pink);
-    padding: 0.5rem 0;
-    border: unset;
-    outline: unset;
-    border-radius: 25px;
-    box-shadow: 0 5px 10px grey;
-    cursor: pointer;
-    font-weight: 600;
-}
-
-.main-right {
-    padding: 6rem 0 0 2rem;
-    flex: 3;
-}
-
-.main-right>form>i {
+.inner {
     display: flex;
-    width: 10rem;
-    border-radius: 50%;
-    margin-bottom: 1rem;
+    flex-direction: column;
+}
+.inner > input {
+    padding: 0.5rem;
+}
+form > button {
+    align-self: flex-end;
+    margin: 2rem 0 0;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    border: unset;
+    cursor: pointer;
+    background-color: rgba(0,0,255, 0.4);
+}
+.no-res {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
     justify-content: center;
     align-items: center;
-    aspect-ratio: 1/1;
-    background-color: var(--pink);
-    color: var(--black);
-    font-size: 7rem;
 }
-
-.profile {
+.no-res i {
+    font-size: 5rem;
+    margin-bottom: 1rem;
+}
+.no-res span {
+    text-align: center;
+    font-size: clamp(0.7rem, 0.4857rem + 0.6857vw, 1rem);
+}
+.result-cont {
+    padding: 1rem;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    height: 100%;
 }
-
-.profile>div:not(.button-area):not(.form-heading):not(.error-box):not(.pass-requirements) {
-    width: min(100%, 500px);
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-}
-
-.contact-form {
+.inner-rec {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 80%;
+    gap: 2rem;
 }
-
-.contact-form>input:first-child {
-    width: min(30%, 55px);
+.center-heading {
+    border-bottom: 1px solid black;
+    font-size: clamp(1rem, 0.6429rem + 1.1429vw, 1.5rem);
 }
-
-.contact-form>input:nth-child(2) {
-    width: 100%;
-}
-
-input {
-    padding: 0.5rem;
-}
-
-.form-heading {
-    font-size: clamp(1.2rem, 0.6286rem + 1.8286vw, 2rem);
-    font-weight: 600;
-}
-
-strong {
-    text-align: justify;
-}
-
-.delete-acc>div:not(.button-area):not(.form-heading) {
-    width: min(100%, 500px);
-    display: grid;
-    grid-template-columns: 1fr;
-}
-
-/* Pass Requirements */
-.pass-requirements {
-    margin: 0.5rem 0;
-    padding: 0.5rem;
-    width: min(100%, 500px);
-    background-color: var(--pink);
-}
-.pass-requirements > span {
-    font-weight: 600;
-}
-.requirement {
-    font-size: 0.75rem;
-}
-
-/* for buttons */
-button {
-    cursor: pointer;
-    transition: 0.6s ease;
-}
-
-button:hover {
-    scale: 1.1;
-}
-
-.main-left>form>button:hover {
-    background-color: var(--brown);
-    color: var(--white);
-}
-
-.button-area {
-    width: min(100%, 500px);
-    margin-bottom: 2rem;
-}
-
-.form-btnarea {
-    width: 80%;
-}
-
-.button-area,
-.form-btnarea {
-    margin-top: 3rem;
+.inner-rec > div {
     display: flex;
     justify-content: space-between;
 }
-
-.button-area button,
-.form-btnarea button {
-    width: 5rem;
-    padding: 0.5rem 1rem;
-    border-radius: 25px;
-    border: none;
-    box-shadow: 0 0 10px grey;
-    font-weight: 600;
-}
-
-.button-area button:first-child,
-.form-btnarea button:first-child {
-    background-color: var(--btnRed);
-    color: red;
-}
-
-.button-area button:nth-child(2),
-.form-btnarea button:nth-child(2) {
-    background-color: var(--btnGreen);
-    color: green;
-}
-
-/* popup form */
-#logoutForm,
-#deleteForm,
-#clearForm,
-#submitForm {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    background-color: rgba(0, 0, 0, 0.4);
-}
-
-.popupForm {
-    background-color: var(--white);
-    border-radius: 20px;
-    box-shadow: 0 0 10px var(--black);
-    padding: 1rem;
-    width: min(80%, 350px);
-    text-align: center;
-    display: flex;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.headertext-box {
-    font-size: 1.2rem;
-    font-weight: 600;
-}
-
-.headertext-box>small {
-    font-weight: 100;
-    text-align: center;
-}
-
-
 
 /* screen size control */
 /* query screen size for font change */
 @media screen and (max-width: 767px) {
     .nav-content * {
         font-size: 0.8rem;
+    }
+    .main-content {
+        flex-direction: column;
+        align-items: center;
+        gap: 2rem;
     }
 }
 
